express/blocks/floating-panel/floating-panel.css
/* in case the block was authored alone in a section */
div[class='section section-wrapper floating-panel-container'] {
    padding: 0;
}

.block.floating-panel {
    position: fixed;
    margin-bottom: 24px;
    overflow: hidden;
    bottom: 0;
    color: var(--color-white);
    left: 50%;
    transform: translateX(-50%);
    border-radius: 20px;
    box-shadow: 0 0 10px #00000029;
    width: 100%;
    max-width: 1061px;
    box-sizing: border-box;
    transition: bottom 0.4s;
    transform-style: preserve-3d;
    z-index: 1;
}

.block.floating-panel:after {
    content: '';
    width: 100vw;
    height: 150px;
    left: 50%;
    background-origin: padding-box;
    bottom: -24px;
    transform: translateX(-50%) translateZ(-1px);
    position: fixed;
    background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.1) 20%, rgba(255,255,255,0.95) 70%, rgba(255,255,255,1) 78%);
    z-index: -1;
}


.block.floating-panel.expanded {
    color: var(--color-black);
}

.block.floating-panel .bottom-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background: var(--color-black);
    padding: 0 24px 24px 24px;
    max-height: 56px;
    transition: background-color 0.4s;
}

.block.floating-panel .top-container {
    max-height: 0px;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    overflow: hidden;
    background: #F8F8F8;
    padding: 24px 24px 0 24px;
    background: var(--color-black);
    color: var(--color-black);
    transition: max-height 0.4s, background-color 0.4s;
}

.block.floating-panel.expanded .top-container {
    max-height: 640px;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    padding: 24px 24px 24px 24px;
    background: #F8F8F8;
}

.block.floating-panel.expanded .bottom-container {
    background: #F3F3F3;
    padding-top: 24px;
}

.block.floating-panel .bottom-container .timeline {
    display: none;
    padding-left: 80px;
}

.block.floating-panel .bottom-container .timeline .text-wrapper {
    font-size: var(--body-font-size-xs);
    margin: 0;
    font-weight: 700;
}

.block.floating-panel .bottom-container .timeline .status-wrapper {
    font-size: var(--body-font-size-xs);
    margin: 0;
    font-weight: 400;
}

.block.floating-panel.expanded .bottom-container .timeline {
    display: flex;
    align-items: center;
    gap: 56px;
}

.block.floating-panel .bottom-container .timeline img.icon {
    height: 22px;
    width: 22px;
    padding: 4px;
    background: #6D6D6D;
    border-radius: 50%;
    border: 4px solid transparent;
}

.block.floating-panel .bottom-container .timeline .time-wrapper {
    position: relative;
}

.block.floating-panel .bottom-container .timeline .time-today img.icon {
    height: 30px;
    width: 30px;
    padding: unset;
    border-radius: 50%;
    border: 4px solid #ADB1FD;
}

.block.floating-panel .bottom-container .timeline .time-today:after {
    content: '';
    position: absolute;
    width: 80px;
    border: 2px solid var(--color-info-accent);
    left: calc(100% - 8px);
    top: 18px;
}

.block.floating-panel .bottom-container .timeline .time-reminder:after {
    content: '';
    position: absolute;
    width: 88px;
    border: 2px dotted var(--color-info-accent);
    left: calc(100% - 20px);
    top: 18px;
}

.block.floating-panel .top-container > div {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 24px
}

.block.floating-panel .top-container > div > div {
    flex: 1 1 0;
    max-width: 44%;
}

.block.floating-panel .top-container picture img {
    object-fit: cover;
}

.block.floating-panel .top-container h2,
.block.floating-panel .top-container h3, 
.block.floating-panel .top-container h4 {
    font-size: var(--heading-font-size-m);
    text-align: left;
}

.block.floating-panel .top-container p {
    text-align: left;
    font-size: var(--body-font-size-s);
    margin: 18px 0;
    display: flex;
    align-items: center;
}

.block.floating-panel .top-container p img.icon {
    margin-right: 16px;
    height: 24px;
    width: 24px;
}

.block.floating-panel .top-container p a {
    font-size: var(--body-font-size-m);
}

.block.floating-panel .top-container .close-panel-button {
    background: var(--color-black);
    padding: 16px;
    border-radius: 50%;
    min-height: 16px;
    min-width: 16px;
    cursor: pointer;
}

.block.floating-panel .top-container .close-panel-button img {
    display: block;
}

.block.floating-panel.hidden {
    bottom: -150px;
}

.block.floating-panel .content-container {
    display: flex;
    align-items: center;
    gap: 16px;
    max-width: 530px;
    overflow: hidden;
    width: 100%;
    transition: max-width 0.4s;
}

.block.floating-panel .content-container .toggle-button {
    background-color: var(--color-white);
    position: relative;
    padding: 16px;
    border-radius: 50%;
    min-height: 16px;
    min-width: 16px;
}

.block.floating-panel.expanded .content-container {
    display: none;
}

.block.floating-panel.expanded .content-container {
    display: none;
}

.block.floating-panel .content-container .toggle-button img {
    display: block;
}

.block.floating-panel .content-container .toggle-button .lottie {
    filter: invert(1);
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: 80px;
    width: 120px;
    pointer-events: none;
    transition: opacity 0.2s;
}

.block.floating-panel .content-container h4 {
    text-align: left;
    white-space: nowrap;
    -webkit-font-smoothing: antialiased; /* Chrome, Safari */
    -moz-osx-font-smoothing: grayscale; /* Firefox */
}

.block.floating-panel .content-container p {
    text-align: left;
    white-space: nowrap;
    font-size: var(--body-font-size-s);
    margin: 0;
    -webkit-font-smoothing: antialiased; /* Chrome, Safari */
    -moz-osx-font-smoothing: grayscale; /* Firefox */
}

.block.floating-panel .buttons-wrapper {
    display: flex;
}

.block.floating-panel p.button-container {
    margin: 0;
    width: max-content;
}

.block.floating-panel p.button-container .button {
    margin: 0 8px;
    display: block;
    -webkit-font-smoothing: antialiased; /* Chrome, Safari */
    -moz-osx-font-smoothing: grayscale; /* Firefox */
}

.block.floating-panel p.button-container .button.gradient {
    display: flex;
    align-items: center;
}

.block.floating-panel p.button-container .button.gradient img.icon.icon-premium {
    width: 22px;
    height: 22px;
    margin-right: 8px;
}

.block.floating-panel.expanded p.button-container a.button.reverse.primary.dark {
    border-color: var(--color-black);
    color: var(--color-black);
}

